# argos3-experiments

./: .gitignore  CMakeLists.txt  LICENSE  README.md
controllers/: CMakeLists.txt
experiments/: eyebot_diffusion_1.argos  eyebot_diffusion_10.argos
loop_functions/: CMakeLists.txt
loop_functions/empty_loop_functions/: CMakeLists.txt  empty_loop_functions.cpp  empty_loop_functions.h
loop_functions/footbot_with_loopfunction_interaction/: CMakeLists.txt  footbot_with_loopfunction_interaction_loopfunctions.cpp  footbot_with_loopfunction_interaction_loopfunctions.h
loop_functions/loop_functions_log_float_number/: CMakeLists.txt  loop_functions_log_float_number.cpp  loop_functions_log_float_number.h
loop_functions/loop_functions_variable/: CMakeLists.txt  loop_functions_variable.cpp  loop_functions_variable.h
lua_controllers/: footbot_with_loopfunction_interaction_controller.lua  hello_world_controller.lua  led_controller.lua  light_sensor_controller.lua  loop_functions_variable_controller.lua  omni_camera_controller.lua  persp_camera_controller.lua  rab_double_receiver_controller.lua  rab_double_sender_controller.lua  rab_receiver_controller.lua  rab_sender_controller.lua  random_number_controller.lua  random_number_controller_1.lua  random_number_controller_10.lua  table_controller.lua
lua_experiments/: footbot_hello_world.argos  footbot_led.argos  footbot_light_sensor.argos  footbot_loop_functions_empty.argos  footbot_loop_functions_log_floating_point.argos  footbot_loop_functions_variable.argos  footbot_omni_camera.argos  footbot_persp_camera.argos  footbot_rab.argos  footbot_rab_with_double.argos  footbot_random_number.argos  footbot_random_number_1.argos  footbot_random_number_10.argos  footbot_table.argos  (+1 more)
(+3 files in other folders)
